--- a/ghc-tcplugins-extra.cabal
+++ b/ghc-tcplugins-extra.cabal
@@ -33,6 +33,9 @@ flag deverror
 library
   exposed-modules:     GHC.TcPluginM.Extra
   build-depends:       base >=4.8  && <5,
+  if impl(ghcjs >= 8.2)
+                       ghc-api-ghcjs  >=8.2 && <8.12
+  else
                        ghc  >=7.10 && <8.12
   hs-source-dirs:      src
   default-language:    Haskell2010
