--- a/ghc-tcplugins-extra.cabal
+++ b/ghc-tcplugins-extra.cabal
@@ -34,7 +34,7 @@ library
   exposed-modules:     GHC.TcPluginM.Extra
   build-depends:       base >=4.8  && <5,
                        ghc  >=7.10 && <8.12
-  if impl(ghcjs >= 8.2)
+  if impl(ghcjs)
                        ghc-api-ghcjs  >=8.2 && <8.12
   hs-source-dirs:      src
   default-language:    Haskell2010
